# Trading-Strategy-Backtester

./: .gitignore  CMakeLists.txt  Makefile  README.md  backtesterClient.py  build_script.sh  dockerfile  gitlab.csv  main.cpp  output.json  run.sh  signal.h  sma.cpp  stock-history-api.py  stop.sh  strategies.h  trading.proto  tradingSim
protos/: service.proto  trading.proto
src/: backtesterClient.py  main.cpp  service_pb2.py  service_pb2_grpc.py  signal.h  sma.cpp  strategies.h
